<resources>
    <string name="app_name">Alura Esporte</string>
    <string name="comprar">Comprar</string>
    <string name="data_de_validade">Data de validade</string>
    <string name="numero_cartao">Número cartão</string>
    <string name="numero_cvc">CVC</string>
    <string name="confirmar_pagamento">Confirmar pagamento</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="compra_realizada">Compra realizada</string>

    <string name="lista_produto">Lista de Produto</string>
    <string name="detalhe_produto">Detalhes de Produto</string>
    <string name="pagamento">Pagamento</string>
    <string name="nemu_deslogar">Deslogar</string>
    <string name="login">Login</string>
    <string name="cadastro_usuario">Cadastro de Usuario</string>
    <string name="adicionar_novo_usuario">Adicionar Novo Usuario</string>
    <string name="lista_pagamento">Lista Pagamento</string>
</resources>
