<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nave_gragh"
    app:startDestination="@id/nave_lista_produto">

    <action
        android:id="@+id/action_global_nave_login"
        app:destination="@id/navigation"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left"
        app:popEnterAnim="@anim/slide_out_left"
        app:popExitAnim="@anim/slide_out_right"
        app:popUpTo="@id/nave_lista_produto"
        app:popUpToInclusive="true" />

    <fragment
        android:id="@+id/nave_detalhe_produto"
        android:name="br.com.alura.aluraesporte.ui.fragment.DetalhesProdutoFragment"
        android:label="@string/detalhe_produto"
        tools:layout="@layout/detalhes_produto">
        <action
            android:id="@+id/action_nave_detalhe_produto_to_nave_pagamento_compra"
            app:destination="@id/nave_pagamento_compra"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_out_left"
            app:popExitAnim="@anim/slide_out_right" />
        <argument
            android:name="produtoId"
            app:argType="long"
            app:nullable="false" />
    </fragment>

    <fragment
        android:id="@+id/nave_pagamento_compra"
        android:name="br.com.alura.aluraesporte.ui.fragment.PagamentoFragment"
        android:label="@string/pagamento"
        tools:layout="@layout/pagamento">
        <action
            android:id="@+id/action_nave_pagamento_compra_to_nave_lista_produto"
            app:destination="@id/nave_lista_produto"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_out_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/nave_lista_produto"
            app:popUpToInclusive="true" />
        <argument
            android:name="produtoId"
            app:argType="long"
            app:nullable="false" />
    </fragment>

    <fragment
        android:id="@+id/nave_lista_produto"
        android:name="br.com.alura.aluraesporte.ui.fragment.ListaProdutosFragment"
        android:label="@string/lista_produto"
        tools:layout="@layout/lista_produtos">
        <action
            android:id="@+id/action_nave_lista_produto_to_nave_detalhe_produto"
            app:destination="@id/nave_detalhe_produto"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_out_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <navigation
        android:id="@+id/navigation"
        android:label="Fluxo Login"
        app:startDestination="@id/nave_login">
        <fragment
            android:id="@+id/nave_cadastro_Usuaio"
            android:name="br.com.alura.aluraesporte.ui.fragment.CadastroUsuaioFragment"
            android:label="@string/cadastro_usuario"
            tools:layout="@layout/cadastro_usuario" />
        <fragment
            android:id="@+id/nave_login"
            android:name="br.com.alura.aluraesporte.ui.fragment.LoginFragment"
            android:label="@string/login"
            tools:layout="@layout/login">
            <action
                android:id="@+id/action_loginFragment_to_nave_lista_produto"
                app:destination="@id/nave_lista_produto"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_out_left"
                app:popExitAnim="@anim/slide_out_right"
                app:popUpTo="@id/nave_login"
                app:popUpToInclusive="true" />
            <action
                android:id="@+id/action_nave_login_to_nave_cadastro_Usuaio"
                app:destination="@id/nave_cadastro_Usuaio"
                app:enterAnim="@anim/slide_in_right"
                app:exitAnim="@anim/slide_out_left"
                app:popEnterAnim="@anim/slide_out_left"
                app:popExitAnim="@anim/slide_out_right" />
        </fragment>
    </navigation>
    <fragment
        android:id="@+id/nave_lista_pagamento"
        android:name="br.com.alura.aluraesporte.ui.fragment.ListaPagamentoFragment"
        android:label="@string/lista_pagamento"
        tools:layout="@layout/lista_pagamentos"/>
</navigation>